WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58596
WK2: Past searches not remembered for <input type=search results="5" autosave="foo">
https://bugs.webkit.org/show_bug.cgi?id=58596
Summary
WK2: Past searches not remembered for <input type=search results="5" autosave...
Brady Eidson
Reported
2011-04-14 16:02:37 PDT
Past searches not remembered for <input type=search results="5"> in WebKit2. In radar as <
rdar://problem/9287880
>
Attachments
Patch v1
(8.84 KB, patch)
2011-04-15 10:49 PDT
,
Brady Eidson
mitz: review+
beidson
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2011-04-15 10:49:18 PDT
Created
attachment 89810
[details]
Patch v1
mitz
Comment 2
2011-04-15 12:11:34 PDT
Comment on
attachment 89810
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=89810&action=review
> Source/WebKit2/UIProcess/cf/WebPageProxyCF.cpp:191 > + // The WebProcess shouldnt have bothered to send this message if the name was empty.
Typo: shouldnt.
> Source/WebKit2/UIProcess/cf/WebPageProxyCF.cpp:197 > + size_t size = searchItems.size(); > + if (size) {
size can be defined inside the if().
> Source/WebKit2/UIProcess/cf/WebPageProxyCF.cpp:211 > + // The WebProcess shouldnt have bothered to send this message if the name was empty.
Same typo!!
Brady Eidson
Comment 3
2011-04-15 12:25:34 PDT
r84011
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug