<rdar://problem/9287880> and https://bugs.webkit.org/show_bug.cgi?id=58596 WK2: Past searches not remembered for <input type=search results="5" autosave="foo">

Reviewed by Sam Weinig.

Add SaveRecentSearches and LoadRecentSearches messages:
* UIProcess/WebPageProxy.messages.in:
* UIProcess/WebPageProxy.h:

Message up to the UIProcess for the save/load operations:
* WebProcess/WebCoreSupport/WebSearchPopupMenu.cpp:
(WebKit::WebSearchPopupMenu::saveRecentSearches):
(WebKit::WebSearchPopupMenu::loadRecentSearches):
* WebProcess/WebCoreSupport/WebPopupMenu.h:
(WebKit::WebPopupMenu::page):

Save the values to disk CFPreference-style:
* UIProcess/cf/WebPageProxyCF.cpp:
(WebKit::autosaveKey):
(WebKit::WebPageProxy::saveRecentSearches):
(WebKit::WebPageProxy::loadRecentSearches):

Stubbed out for non-CF platforms:
* UIProcess/gtk/WebPageProxyGtk.cpp:
(WebKit::WebPageProxy::saveRecentSearches):
(WebKit::WebPageProxy::loadRecentSearches):
* UIProcess/qt/WebPageProxyQt.cpp:
(WebKit::WebPageProxy::saveRecentSearches):
(WebKit::WebPageProxy::loadRecentSearches):



Canonical link: https://commits.webkit.org/73755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84011 268f45cc-cd09-0410-ab3c-d52691b4dbfc