Source/WebKit2/UIProcess/qt/WebPageProxyQt.cpp
@@ -26,12 +26,24 @@
 #include "config.h"
 #include "WebPageProxy.h"
 
+#include <WebCore/NotImplemented.h>
+
 namespace WebKit {
 
 String WebPageProxy::standardUserAgent(const String& applicationNameForUserAgent)
 {
     // FIXME: This should not be hard coded.
     return "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_6) AppleWebKit/531.4 (KHTML, like Gecko) Version/4.0.3 Safari/531.4";
+}
+
+void WebPageProxy::saveRecentSearches(const String&, const Vector<String>&)
+{
+    notImplemented();
+}
+
+void WebPageProxy::loadRecentSearches(const String&, Vector<String>&)
+{
+    notImplemented();
 }
 
 } // namespace WebKit
