Source/WebKit2/WebProcess/WebCoreSupport/WebSearchPopupMenu.cpp
@@ -23,6 +23,11 @@
 #include "config.h"
 #include "WebSearchPopupMenu.h"
 
+#include "WebPage.h"
+#include "WebPageProxyMessages.h"
+#include "WebProcess.h"
+#include <wtf/text/AtomicString.h>
+
 using namespace WebCore;
 
 namespace WebKit {
@@ -42,12 +47,28 @@ PopupMenu* WebSearchPopupMenu::popupMenu()
     return m_popup.get();
 }
 
-void WebSearchPopupMenu::saveRecentSearches(const AtomicString&, const Vector<String>&)
+void WebSearchPopupMenu::saveRecentSearches(const AtomicString& name, const Vector<String>& searchItems)
 {
+    if (name.isEmpty())
+        return;
+
+    WebPage* page = m_popup->page();
+    if (!page)
+        return;
+
+    WebProcess::shared().connection()->send(Messages::WebPageProxy::SaveRecentSearches(name, searchItems), page->pageID());
 }
 
-void WebSearchPopupMenu::loadRecentSearches(const AtomicString&, Vector<String>&)
+void WebSearchPopupMenu::loadRecentSearches(const AtomicString& name, Vector<String>& resultItems)
 {
+    if (name.isEmpty())
+        return;
+
+    WebPage* page = m_popup->page();
+    if (!page)
+        return;
+
+    WebProcess::shared().connection()->sendSync(Messages::WebPageProxy::LoadRecentSearches(name), Messages::WebPageProxy::LoadRecentSearches::Reply(resultItems), page->pageID());
 }
 
 bool WebSearchPopupMenu::enabled()
